--- a/resources/css/metro.css
+++ b/resources/css/metro.css
@@ -9573,7 +9573,8 @@ input[type="submit"].link:active {
   display: block;
   background-color: inherit;
   color: inherit;
-  padding: .625rem 1rem .625rem 3.75rem;
+  /*padding: .625rem 1rem .625rem 3.75rem;*/
+  /*padding: .325rem 1rem .325rem .75rem;*/
   position: relative;
   width: 100%;
   height: 100%;
@@ -9597,9 +9598,24 @@ input[type="submit"].link:active {
   white-space: nowrap;
 }
 .sidebar li a .title {
-  font-size: .6875rem;
-  font-weight: bold;
-  text-transform: uppercase;
+/*  font-size: 28px;
+  vertical-align: middle;
+  text-align: center;
+  position: absolute;
+  left: .625rem;
+  top: .625rem;*/
+
+  font-family: "Segoe UI", "Open Sans", sans-serif, serif;
+  font-size: 0.875rem;
+  line-height: 1.1;
+  font-weight: 400;
+  font-style: normal;
+  padding-top:  15px;
+  vertical-align: middle;
+  /*font-size: 1rem;*/
+  /*font-weight: bold;*/
+  /*font-weight: normal;*/
+  /*text-transform: uppercase;*/
 }
 .sidebar li a .counter {
   font-size: .7rem;
@@ -10126,14 +10142,14 @@ input[type="submit"].link:active {
   margin: 0 2px;
 }
 .tabcontrol2 .tabs li:after {
-  content: "";
+/*  content: "";
   position: absolute;
   left: 0;
-  top: 100%;
-  width: 100%;
-  background-color: #ffffff;
-  height: 2px;
-  z-index: 3;
+  top: 100%;*/
+  /*width: 100%;*/
+  /*background-color: transparent;*/
+  height: 0px;
+  /*z-index: 3;*/
 }
 .tabcontrol2 .tabs li:not(.active):after {
   background-color: #eeeeee;
@@ -10155,7 +10171,7 @@ input[type="submit"].link:active {
   background-color: #ffffff;
   border: 1px #eeeeee solid;
   border-top: 2px #ce352c solid;
-  border-bottom: 0;
+  border-bottom: 0px ;
   text-shadow: none ;
   color: #1ba1e2;
 }
@@ -18511,3 +18527,5 @@ video::-webkit-media-controls-enclosure {
   -webkit-transform: rotateY(-360deg);
           transform: rotateY(-360deg);
 }
+
+ 
